--- a/package.json
+++ b/package.json
@@ -2,21 +2,42 @@
   "name": "oxonote-web-ts",
   "version": "0.0.1",
   "description": "more than a notebook",
-  "main": "index.ts",
+  "main": "src/index.tsx",
   "scripts": {
     "start": "webpack-dev-server --open --colors",
+    "build": "rm -rf ./dist && webpack --config webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
+    "@material-ui/icons": "^4.9.1",
+    "@types/redux-immutable": "^4.0.1",
+    "emoji-mart": "^3.0.0",
+    "immutable": "^4.0.0-rc.12",
+    "notistack": "^0.9.9",
+    "pouchdb-browser": "^7.2.1",
+    "pouchdb-find": "^7.2.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-contenteditable": "^3.3.4",
+    "react-dom": "^16.13.1",
+    "react-intl": "^4.3.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-immutable": "^4.0.0",
+    "redux-react-hook": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "slate": "^0.57.1",
+    "slate-react": "^0.57.1",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "awesome-typescript-loader": "^5.2.1",
@@ -30,6 +51,7 @@
     "typescript": "^3.8.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
