--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "jsx": "react",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     "sourceMap": true,                     /* Generates corresponding '.map' file. */
     "strict": true,                           /* Enable all strict type-checking options. */
-    "baseUrl": "src",                       /* Base directory to resolve non-absolute module names. */
+    "baseUrl": ".",                       /* Base directory to resolve non-absolute module names. */
     "paths": {
       "@/*": ["./src/*"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
@@ -17,7 +17,7 @@
     "noImplicitThis": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
   "include": [
     "./src/**/*"
