--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@loadable/component": "^5.12.0",
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
     "@types/redux-immutable": "^4.0.1",
+    "clsx": "^1.1.0",
+    "connected-react-router": "^6.8.0",
     "emoji-mart": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
+    "material-ui-popup-state": "^1.5.4",
     "notistack": "^0.9.9",
     "pouchdb-browser": "^7.2.1",
     "pouchdb-find": "^7.2.1",
@@ -29,25 +33,39 @@
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
     "redux-react-hook": "^4.0.1",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "slate": "^0.57.1",
     "slate-react": "^0.57.1",
+    "styled-components": "^5.0.1",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
+    "@types/emoji-mart": "^2.11.3",
+    "@types/loadable__component": "^5.10.0",
+    "@types/pouchdb-browser": "^6.1.3",
+    "@types/pouchdb-find": "^6.3.5",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
+    "@types/react-loadable": "^5.5.3",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^5.0.1",
+    "@types/uuid": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "html-webpack-plugin": "^4.0.4",
+    "node-sass": "^4.13.1",
     "prettier": "^2.0.2",
+    "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.1.3",
     "typescript": "^3.8.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.1",
