--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowJs": true,
     "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    "lib": ["dom", "es2015", "es2015.promise"], /* Specify library files to be included in the compilation. */
+    "lib": ["dom", "es2015", "es2015.promise", "es2016", "es2019"], /* Specify library files to be included in the compilation. */
     "jsx": "react",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     "sourceMap": true,                     /* Generates corresponding '.map' file. */
     "strict": true,                           /* Enable all strict type-checking options. */
