--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pouchdb-browser": "^7.2.1",
     "pouchdb-find": "^7.2.1",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-contenteditable": "^3.3.4",
     "react-dom": "^16.13.1",
     "react-intl": "^4.3.1",
@@ -46,6 +47,7 @@
     "@types/pouchdb-browser": "^6.1.3",
     "@types/pouchdb-find": "^6.3.5",
     "@types/react": "^16.9.32",
+    "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-dom": "^16.9.6",
     "@types/react-loadable": "^5.5.3",
     "@types/react-redux": "^7.1.7",
@@ -60,6 +62,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.0.4",
     "node-sass": "^4.13.1",
     "prettier": "^2.0.2",
