--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-intl": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
     "redux-react-hook": "^4.0.1",
@@ -62,6 +63,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "fork-ts-checker-webpack-plugin": "^4.1.2",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.0.4",
     "node-sass": "^4.13.1",
@@ -69,6 +71,7 @@
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
+    "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.42.1",
