--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   "license": "ISC",
   "dependencies": {
     "@loadable/component": "^5.12.0",
+    "@matejmazur/react-katex": "^3.0.2",
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
     "@types/redux-immutable": "^4.0.1",
+    "@types/typography": "^0.16.3",
     "clsx": "^1.1.0",
     "connected-react-router": "^6.8.0",
     "emoji-mart": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
+    "katex": "^0.11.1",
     "material-ui-popup-state": "^1.5.4",
     "notistack": "^0.9.9",
     "pouchdb-browser": "^7.2.1",
     "pouchdb-find": "^7.2.1",
+    "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-contenteditable": "^3.3.4",
@@ -40,6 +44,8 @@
     "slate": "^0.57.1",
     "slate-react": "^0.57.1",
     "styled-components": "^5.0.1",
+    "typography": "^0.16.19",
+    "typography-theme-wordpress-2016": "^0.16.19",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
@@ -47,6 +53,7 @@
     "@types/loadable__component": "^5.10.0",
     "@types/pouchdb-browser": "^6.1.3",
     "@types/pouchdb-find": "^6.3.5",
+    "@types/prismjs": "^1.16.0",
     "@types/react": "^16.9.32",
     "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-dom": "^16.9.6",
@@ -74,6 +81,7 @@
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
