--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "immutable": "^4.0.0-rc.12",
     "katex": "^0.11.1",
     "material-ui-popup-state": "^1.5.4",
+    "nanoid": "^3.1.3",
     "notistack": "^0.9.9",
     "pouchdb-browser": "^7.2.1",
     "pouchdb-find": "^7.2.1",
