--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "emoji-mart": "^3.0.0",
     "immutable": "^4.0.0-rc.12",
     "katex": "^0.11.1",
+    "lodash": "^4.17.15",
     "material-ui-popup-state": "^1.5.4",
     "nanoid": "^3.1.3",
     "notistack": "^0.9.9",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@types/emoji-mart": "^2.11.3",
     "@types/loadable__component": "^5.10.0",
+    "@types/lodash": "^4.14.150",
     "@types/pouchdb-browser": "^6.1.3",
     "@types/pouchdb-find": "^6.3.5",
     "@types/prismjs": "^1.16.0",
