--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-ui/lab": "^4.0.0-alpha.49",
     "@types/redux-immutable": "^4.0.1",
     "@types/typography": "^0.16.3",
+    "axios": "^0.19.2",
     "clsx": "^1.1.0",
     "connected-react-router": "^6.8.0",
     "emoji-mart": "^3.0.0",
@@ -28,6 +29,7 @@
     "material-ui-popup-state": "^1.5.4",
     "nanoid": "^3.1.3",
     "notistack": "^0.9.9",
+    "pouchdb-authentication": "^1.1.3",
     "pouchdb-browser": "^7.2.1",
     "pouchdb-find": "^7.2.1",
     "prismjs": "^1.20.0",
@@ -44,6 +46,7 @@
     "redux-react-hook": "^4.0.1",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "save": "^2.4.0",
     "slate": "^0.57.1",
     "slate-history": "^0.57.1",
     "slate-react": "^0.57.1",
