--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "material-ui-popup-state": "^1.5.4",
     "nanoid": "^3.1.3",
     "notistack": "^0.9.9",
+    "pbkdf2": "^3.0.17",
     "pouchdb-authentication": "^1.1.3",
     "pouchdb-browser": "^7.2.1",
     "pouchdb-find": "^7.2.1",
@@ -61,6 +62,7 @@
     "@types/emoji-mart": "^2.11.3",
     "@types/loadable__component": "^5.10.0",
     "@types/lodash": "^4.14.150",
+    "@types/pbkdf2": "^3.0.0",
     "@types/pouchdb-browser": "^6.1.3",
     "@types/pouchdb-find": "^6.3.5",
     "@types/prismjs": "^1.16.0",
