--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "sideEffects": ["*.css"],
   "dependencies": {
     "@loadable/component": "^5.12.0",
     "@matejmazur/react-katex": "^3.0.2",
@@ -20,7 +21,6 @@
     "@types/redux-immutable": "^4.0.1",
     "@types/typography": "^0.16.3",
     "axios": "^0.19.2",
-    "clsx": "^1.1.0",
     "connected-react-router": "^6.8.0",
     "delay": "^4.3.0",
     "dotenv-webpack": "^1.7.0",
@@ -31,7 +31,6 @@
     "material-ui-popup-state": "^1.5.4",
     "nanoid": "^3.1.3",
     "notistack": "^0.9.9",
-    "pbkdf2": "^3.0.17",
     "pouchdb-authentication": "^1.1.3",
     "pouchdb-browser": "^7.2.1",
     "pouchdb-find": "^7.2.1",
@@ -55,14 +54,12 @@
     "slate-react": "^0.57.1",
     "styled-components": "^5.0.1",
     "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19",
-    "uuid": "^7.0.3"
+    "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
     "@types/emoji-mart": "^2.11.3",
     "@types/loadable__component": "^5.10.0",
     "@types/lodash": "^4.14.150",
-    "@types/pbkdf2": "^3.0.0",
     "@types/pouchdb-browser": "^6.1.3",
     "@types/pouchdb-find": "^6.3.5",
     "@types/prismjs": "^1.16.0",
@@ -72,8 +69,9 @@
     "@types/react-loadable": "^5.5.3",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redux-immutable": "^4.0.1",
     "@types/styled-components": "^5.0.1",
-    "@types/uuid": "^7.0.2",
+    "@types/typography": "^0.16.3",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "awesome-typescript-loader": "^5.2.1",
@@ -85,18 +83,18 @@
     "fork-ts-checker-webpack-plugin": "^4.1.2",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.0.4",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.2",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
+    "terser-webpack-plugin": "^3.0.1",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
