commit webpack changes

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "sideEffects": ["*.css"],
+  "sideEffects": [
+    "*.css"
+  ],
   "dependencies": {
     "@loadable/component": "^5.12.0",
     "@matejmazur/react-katex": "^3.0.2",
